
file(GLOB_RECURSE src_files include/*.h src/*.cpp)
file(GLOB_RECURSE shader_files data/shaders/*.vert data/shaders/*.frag)
add_library(voxel_lib STATIC ${src_files} ${shader_files})
target_link_libraries(voxel_lib PUBLIC Neko_Core sdl_engine gles3_wrapper)
target_include_directories(voxel_lib PUBLIC include/)
file(GLOB_RECURSE main_files main/*.cpp)
set_target_properties (voxel_lib PROPERTIES FOLDER Neko/Main/Voxel)
data_generate(voxel_lib)
set_target_properties (voxel_lib_Generate_Data PROPERTIES FOLDER Neko/Main/Voxel)

foreach(main_project_path ${main_files})
    get_filename_component(main_project_name ${main_project_path} NAME_WE)
    add_executable(${main_project_name} ${main_project_path})
    target_include_directories(${main_project_name} PUBLIC ${EXTERNAL_DIR}/utilities/)
    set_target_properties (${main_project_name} PROPERTIES FOLDER Neko/Main/Voxel)
    target_link_libraries(${main_project_name} PUBLIC voxel_lib physfs_wrapper)
endforeach()
